 FLa4a 1.6.x:

 NEW FEATURES:
 - method sca.est to run stock assessments in a MP. 
 - method sep.est to run separable stock assessments in a MP. 
 - sca.est and sep.est adjusted to new mse naming convention.
 
 BUG FIXES:

 FLa4a 1.5.x:

 NEW FEATURES:
 - methods "a4a" removed
 - method a4aSCA replaced with sca
 - method sca removed, now works as previous a4aSCA
 - new accessors for coefficients
 
 BUG FIXES:
 - residuals now work with FLIndex fits 
 - n1 default model fixed
 - a lot of small things due to change in slot name from params to coefficients
 - predict of FLIndexBiomass now reports for "all", not each age.
  
 FLa4a 1.1.x:

 NEW FEATURES:

	BUG FIXES:
- plot(residuals) has a new argument 'auxline' which allows selecting 'smooth', 'r' or empty for no line.
- indices names with ':' were crashing the qmodel, now fixed
- minor fixes in documentation
- iter new method which subsets indices
- plot(fit, indices) warns and removes FLIndexBiomass indices.

 FLa4a 1.0.0:

 NEW FEATURES:
- ma() now takes any function to compute weights
- tests extended to check sca/a4aSCA defaults submodels
- sca and a4aSCA have the same default submodels
- wireframe for FLQuant
- plot fits vs observation improved (yaxis removed)
- new vignette for introduction
- new vignette for growth modelling
- new vignette for natural mortality modelling
- new vignette for stock assessment
- new themes for residual plots
- default model in sca changed from if (ka < 3) ka else min(max(3, floor(.5 * ka)), 6) to if (ka < 3) ka else min(max(3, floor(.66 * ka)), 10), adding more degress of freedom. It has been noticed that age tends to be modelled with a reduced number of ks. 

	BUG FIXES:
- man pages reviewed

 FLa4a 0.800.x:

	BUG FIXES:
- a4aInternal to remove files after a4a ADMB run

 FLa4a 0.700.x:

 BUG FIXES:
- a4aInternal was calling check.executable() which isn't needed and was making a mess in parallel