@@ -52,6 +52,7 @@ exportMethods(a4aGr)
 exportMethods(a4aM)
 exportMethods(breakpts)
 exportMethods(bubbles)
+exportMethods(burnin)
 exportMethods(clock)
 exportMethods(coef)
 exportMethods(covar)
